Se agrega codigo de slider a sass y se cambian los productos del index por variedad

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./scss/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Varela+Round&display=swap" rel="stylesheet">
@@ -209,27 +210,95 @@
                         <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Mouse Gamer G502 X PLUS Wireless Blanco</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 5L5MXPWB</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>14 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/L-G502-XP.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 129.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 179.990</s></span>
+                        </div>
+                    </a>
+                    <a href="./pages/product.html" class="cartplus">
+                        <i class="fa fa-cart-plus"></i>
+                    </a>
+                </div>
+            </li>
+            <li class="product">
+                <a href="./pages/product.html" class="productinfo">
+                    <div class="producttrademark">
+                        <span><strong>Victus </strong><i class="fas fa-registered"></i></span>
+                    </div>
+                    <div class="productname">
+                        <p>Notebook Gamer Victus Intel i5-11400H NVIDIA RTX 3050 4GB 16.1" FHD 60Hz 8GB RAM 256GB SSD Windows 11 16-d0500la Performance Blue</p>
+                    </div>
+                    <div class="skuunits">
+                        <div class="productsku">
+                            <span><strong>SKU:</strong> 8NV5R3W1</span>
+                        </div>
+                        <div class="productunits">
+                            <span>20 Stock</span>
+                        </div>
+                    </div>
+                    <div class="productimg">
+                        <img src="./images/V-16I5R3-NG.jpg" alt="imgoneozg">
+                    </div>
+                </a>
+                <div class="valuecart">
+                    <a href="./pages/product.html" class="value">
+                        <div class="productvalue">
+                            <span><strong>$ 1.079.990</strong></span>
+                        </div>
+                        <div class="productprevalue">
+                            <span><s>$ 1.349.990</s></span>
+                        </div>
+                    </a>
+                    <a href="./pages/product.html" class="cartplus">
+                        <i class="fa fa-cart-plus"></i>
+                    </a>
+                </div>
+            </li>
+            <li class="product">
+                <a href="./pages/product.html" class="productinfo">
+                    <div class="producttrademark">
+                        <span><strong>Gear </strong><i class="fas fa-registered"></i></span>
+                    </div>
+                    <div class="productname">
+                        <p>Desktop Gamer Red Demon AMD Ryzen 5 5600X 8GB 240GB SSD NVIDIA PH-GTX 1650 4GB</p>
+                    </div>
+                    <div class="skuunits">
+                        <div class="productsku">
+                            <span><strong>SKU:</strong> TO10GR5G</span>
+                        </div>
+                        <div class="productunits">
+                            <span>2 Stock</span>
+                        </div>
+                    </div>
+                    <div class="productimg">
+                        <img src="./images/T-GGEAR-RG.jpg" alt="imgoneozg">
+                    </div>
+                </a>
+                <div class="valuecart">
+                    <a href="./pages/product.html" class="value">
+                        <div class="productvalue">
+                            <span><strong>$ 499.990</strong></span>
+                        </div>
+                        <div class="productprevalue">
+                            <span><s>$ 750.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -243,27 +312,27 @@
                         <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Mouse Gamer G604 Lightspeed Wireless-Bluetooth Negro</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 5L6M2G40</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>28 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/L-G604-LS.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 63.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 79.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -274,98 +343,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>HyperX </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Teclado Gamer HyperX Alloy Elite2 Mecánico Español</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 1THAL2ME</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>3 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/H-ELITE2-ME.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 119.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
-                        </div>
-                    </a>
-                    <a href="./pages/product.html" class="cartplus">
-                        <i class="fa fa-cart-plus"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="product">
-                <a href="./pages/product.html" class="productinfo">
-                    <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
-                    </div>
-                    <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
-                    </div>
-                    <div class="skuunits">
-                        <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
-                        </div>
-                        <div class="productunits">
-                            <span>+100 Stock</span>
-                        </div>
-                    </div>
-                    <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
-                    </div>
-                </a>
-                <div class="valuecart">
-                    <a href="./pages/product.html" class="value">
-                        <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
-                        </div>
-                        <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
-                        </div>
-                    </a>
-                    <a href="./pages/product.html" class="cartplus">
-                        <i class="fa fa-cart-plus"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="product">
-                <a href="./pages/product.html" class="productinfo">
-                    <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
-                    </div>
-                    <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
-                    </div>
-                    <div class="skuunits">
-                        <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
-                        </div>
-                        <div class="productunits">
-                            <span>+100 Stock</span>
-                        </div>
-                    </div>
-                    <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
-                    </div>
-                </a>
-                <div class="valuecart">
-                    <a href="./pages/product.html" class="value">
-                        <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
-                        </div>
-                        <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 139.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -385,30 +386,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Dell </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro</p>
+                        <p>Notebook Inspiron 3520 Intel i5-1135G7 15.6" FHD 8GB 256GB SSD Windows 11</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 8NDII5W1</span>
                         </div>
                         <div class="productunits">
                             <span>+100 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/N-DINS-I5.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 349.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 549.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
