Se agrega codigo de responsive a sass y se agrega main a pagina shoppingcart

--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -109,6 +109,42 @@
         </div>
     </header>
 
+    <!-- Sección de compras -->
+    <main>
+        <section>
+            <!-- Aqui van los productos -->
+        </section>
+        <section>
+            <div>
+                <span>
+                    RESUMEN
+                </span>
+            </div>
+            <div>
+                <span>
+                    Total a pagar:
+                </span>
+                <span>
+                    $539.980
+                </span>
+                <button type="button">Iniciar Pago</button>
+            </div>
+            <div>
+                <p>Medios de paso disponibles</p>
+                <div>
+                    <!-- Hacer con grid -->
+                    <!-- webpay - redcompra - santander - mercadopago - visa y demas - bancoestado -->
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Seccion footer -->
     <footer id="piepagina">
         <section class="pie socialcontacto">
