Se agrega el main css a los head de las paginas

--- a/index.html
+++ b/index.html
@@ -420,30 +420,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Asus </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Notebook TUF Gaming F15 FX506 Intel Core i5-11400H NVIDIA RTX 2050 4GB 15.6" FHD 144Hz 8GB 512GB SSD Windows 11 Graphite Black</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 7H1G54TG</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>78 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/N-AF15-TG.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 649.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 779.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -454,30 +454,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Apple </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>MacBook Air 13" (Chip M1 CPU 8 núcleos GPU 7 núcleos, 8GB RAM, 256GB SSD) - Gris espacial</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> AM15713A</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>6 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/N-APA13-M1.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 849.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 1.099.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -488,30 +488,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Samsung </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Notebook Galaxy Book3 360 13.3"FHD AMOLED Intel Core i7-1355U 8GB 512GB SSD Windows 11 Silver</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 5FJHW421/span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>31 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/N-SBK3-21.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 990.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 1.229.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -522,30 +522,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>HP </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Notebook 2 en 1 HP Pavilion x360 14" FHD Intel Core i5-1235U 8GB 512GB SSD Windows 11 Natural Silver 14-dy2003la</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> 568UFN2Q</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>8 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/N-HP21-PX.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 829.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 889.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -556,10 +556,10 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Asus </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Notebook Zenbook 14X OLED UX3404 14.5" 2K Intel Core i9-13900H 16GB 1TB SSD Windows 11 Inkwell Gray UX3404VA-M9115W</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
@@ -570,16 +570,16 @@
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/N-AZ14X-UX.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 1.169.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 1.499.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
