Se agrega medios de pago shoppingcart

--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -135,12 +135,12 @@
                 <div>
                     <!-- Hacer con grid -->
                     <!-- webpay - redcompra - santander - mercadopago - visa y demas - bancoestado -->
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="../images/webpay.png" alt="mediospago">
+                    <img src="../images/redcompra.png" alt="mediospago">
+                    <img src="../images/santander.png" alt="mediospago">
+                    <img src="../images/mercadopago.png" alt="mediospago">
+                    <img src="../images/visademas.png" alt="mediospago">
+                    <img src="../images/bancoestado.png" alt="mediospago">
                 </div>
             </div>
         </section>
