Arreglo del boton carrito popup

--- a/index.html
+++ b/index.html
@@ -599,30 +599,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>AMD </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro</p>
+                        <p>CPU Ryzen 5 5600G (AM4)</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> AMD5A46G</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>30 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/CPU-R5-4.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 149.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 154.590</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
