Se agrega variedad de productos en index componentes

--- a/index.html
+++ b/index.html
@@ -633,30 +633,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Gamdias </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Gabinete ATX Aura GC1 / 4 Ventiladores ARGB</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> GAB7157A</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>17 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/GAB-GAMAURA-GC1.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 52.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 55.790</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -667,30 +667,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Asus </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Video AMD Radeon RX560 4G ROG STRIX V2</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> G75UARX4</span>
                         </div>
                         <div class="productunits">
                             <span>+100 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/GPU-ARX5-4.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 92.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 97.890</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -701,30 +701,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Corsair </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>Video AMD Radeon RX560 4G ROG STRIX V2</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> FP780PGM</span>
                         </div>
                         <div class="productunits">
                             <span>+100 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/FP-COR50-PG.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 109.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 115.790</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -735,30 +735,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Gigabyte </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>M/B AMD B550M DS3H (AM4)</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong> PMJG748A</span>
                         </div>
                         <div class="productunits">
-                            <span>+100 Stock</span>
+                            <span>50 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/PM-GB5_DH.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 135.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 143.190</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
@@ -769,30 +769,30 @@
             <li class="product">
                 <a href="./pages/product.html" class="productinfo">
                     <div class="producttrademark">
-                        <span><strong>Logitech </strong><i class="fas fa-registered"></i></span>
+                        <span><strong>Crucial </strong><i class="fas fa-registered"></i></span>
                     </div>
                     <div class="productname">
-                        <p>Mouse Gamer G305 Ligthspeed Wireless Negro con puntos rojos y cafes</p>
+                        <p>M/B AMD B550M DS3H (AM4)</p>
                     </div>
                     <div class="skuunits">
                         <div class="productsku">
-                            <span><strong>SKU:</strong> 5L3M1G8W</span>
+                            <span><strong>SKU:</strong>JHGYU951</span>
                         </div>
                         <div class="productunits">
                             <span>+100 Stock</span>
                         </div>
                     </div>
                     <div class="productimg">
-                        <img src="./images/L-G305-LS.jpg" alt="imgoneozg">
+                        <img src="./images/MR-CLD4-26MH.jpg" alt="imgoneozg">
                     </div>
                 </a>
                 <div class="valuecart">
                     <a href="./pages/product.html" class="value">
                         <div class="productvalue">
-                            <span><strong>$ 39.990</strong></span>
+                            <span><strong>$ 18.990</strong></span>
                         </div>
                         <div class="productprevalue">
-                            <span><s>$ 40.990</s></span>
+                            <span><s>$ 22.990</s></span>
                         </div>
                     </a>
                     <a href="./pages/product.html" class="cartplus">
